fix div breaking on mobile

--- a/public/assets/less/_component-mods.less
+++ b/public/assets/less/_component-mods.less
@@ -272,7 +272,8 @@
     &:before,
     &:after {
         content:'';
-        width:@width;
+        width:100%;
+        max-width:@width;
         margin-left:auto;
         margin-right:auto;
         display: block;
